<resources>
    <string name="app_name">ProjectLearnAndroid</string>
    <string name="email_id">Email ID</string>
    <string name="hint_email">Input Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
</resources>
