<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_baseline_add_location_24"
        android:drawablePadding="-40dp"
        android:paddingStart="10dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="-40dp"
        android:paddingStart="10dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/email_id"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/t1" />

    <EditText
        android:id="@+id/acc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@id/t2" />
    <TextView
        android:id="@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/acc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/epw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/pw"
        />
    <TextView
        android:id="@+id/fpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/epw"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"/>
    <Button
        android:id="@+id/lg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:background="@drawable/bg_lg"
        app:layout_constraintTop_toBottomOf="@id/fpw"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/don_t_have_an_account_register_now"
        app:layout_constraintTop_toBottomOf="@id/lg"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
