<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_music"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_baseline_add_location_24"
        android:drawablePadding="-40dp"
        android:paddingStart="10dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_baseline_email_24"
        app:layout_constraintVertical_chainStyle="packed"
        android:drawablePadding="-40dp"
        android:paddingStart="10dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnFacebook" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintVertical_chainStyle="packed"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/tvLabelEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook" />

    <TextView
        android:id="@+id/tvLabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/email_id"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr" />

    <EditText
        app:layout_constraintBottom_toTopOf="@id/tvLabelPassword"
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEmail" />

    <TextView
        android:id="@+id/tvLabelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        app:layout_constraintVertical_chainStyle="packed"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/tvForgot"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPassword"/>

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/forgot_password"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/bg_lg"
        app:layout_constraintTop_toBottomOf="@id/tvForgot"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/don_t_have_an_account_register_now"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
